# janus

./: .gitignore  Doxyfile  Makefile.am  TRIANGULATION.cc  TRIANGULATION.hh  configure.ac  janus.cc
src/: BLD.cc  BLD.hh  CELL.cc  CELL.hh  CROSS_SECTIONS.cc  CROSS_SECTIONS.hh  DIFFUSION_SOLVER.cc  DIFFUSION_SOLVER.hh  DOF_HANDLER.cc  DOF_HANDLER.hh  EDGE.cc  EDGE.hh  ERROR_ESTIMATOR.cc  ERROR_ESTIMATOR.hh  EXCEPTION.cc  EXCEPTION.hh  FINITE_ELEMENT.hh  GLC.cc  GLC.hh  LS.cc  LS.hh  MIP.cc  MIP.hh  Makefile.am  PARAMETERS.cc  PARAMETERS.hh  PWLD.cc  PWLD.hh  QUADRATURE.cc  QUADRATURE.hh  TRANSPORT_OPERATOR.cc  TRANSPORT_OPERATOR.hh  TRANSPORT_SOLVER.cc  TRANSPORT_SOLVER.hh  TRIANGULATION.cc  TRIANGULATION.hh  janus.cc
tests/: Makefile  Makefile.am  cell_test.cc  cross_sections_cepxs_test.cc  cross_sections_fp_test_1.cc  cross_sections_fp_test_2.cc  cross_sections_regular_test_1.cc  cross_sections_regular_test_2.cc  dof_handler_test.cc  edge_test.cc  geometry_mip.inp  geometry_pol.txt  geometry_rec.inp  geometry_transport_2.inp  glc_test.cc  ls_test.cc  mip_diffusion_test.cc  mip_dsa_test.cc  mip_test.cc  parameters_1.inp  parameters_1.txt  parameters_2.txt  parameters_diffusion_test.cc  parameters_mip.inp  parameters_test_1.cc  parameters_test_2.cc  parameters_transport_2.inp  pwld_test.cc  testsuite.at  transport_operator_test_1.cc  transport_operator_test_2.cc  triangulation_pol_test.cc  triangulation_rec_test.cc
utils/: CONVERT_INPUT.py  MESH_GENERATOR.py  TRIANGLE.py  diana.py  mercury.py  mesh_script.py
