AM_CPPFLAGS = $(GSL_CXXFLAGS) $(TRILINOS_CXXFLAGS) $(LAPACK_CXXFLAGS) $(BLAS_CXXFLAGS) $(MPI_CXXFLAGS)
janus_LDADD = $(AGMG_LIBS) $(GSL_LIBS) $(TRILINOS_LIBS) $(LAPACK_LIBS) $(BLAS_LIBS) $(MPI_LIBS)

bin_PROGRAMS = janus
janus_SOURCES = janus.cc GLC.cc GLC.hh LS.cc LS.hh QUADRATURE.cc QUADRATURE.hh BLD.cc BLD.hh PWLD.cc PWLD.hh FINITE_ELEMENT.hh EDGE.cc EDGE.hh TRIANGULATION.cc TRIANGULATION.hh PARAMETERS.cc PARAMETERS.hh DOF_HANDLER.cc DOF_HANDLER.hh CELL.cc CELL.hh TRANSPORT_SOLVER.cc TRANSPORT_SOLVER.hh TRANSPORT_OPERATOR.cc TRANSPORT_OPERATOR.hh MIP.cc MIP.hh
